# scratchpad

./: .gitignore  README.md
20-aug-rd-contribution/: README.md
asyncio-tutorial/: README.md  sample_asyncio.py
batch-2-story/: our_story.txt
batch-3-git-training/: story.txt
cars-api-rust-examples/: Cargo.toml
cars-api-rust-examples/src/: getenv.rs  main.rs
employee-chooser/: README.md  choose_employee.py
error-reading/: readme.md
github-search/: readme.md  sample_github_search.py
improve-code-standards/: README.md
internship-feedback-nov-2019/: readme.md
jul-2019-internship-review/: feedback.md
junior-training-website/: junior_training.txt
new-hire-onboariding/: README.md
new-hire-rules/: new_hire_rules.md
rust-api-calls/meme/: Cargo.toml
rust-api-calls/meme/src/: http_methods.rs  imgflip.rs  lib.rs  main.rs  meme_type.rs  stubbed_http_methods.rs
rust-api-calls/meme/src/meme_sources/: mod.rs
rust-api-calls/meme/src/meme_sources/imgflip/: imgflip.rs  meme_type.rs  mod.rs
rust-csv-crud/: Cargo.toml  cyborg.csv  empty.csv  invalid_file.csv  large.csv  large.xlsx
rust-csv-crud/src/: main.rs
skype-sender-exercise/: README.MD  README.md  Readme.md  conf.py  conftest.py  post-test-msg.py  post_message_to_skype.py  requirements.txt  send_message_exercise.py  skype-sender-post-message.py  skype_conf.py  skype_config.py  skype_message_sender.py  skype_sender_test_rahul.py  test_send_msg_testchannel.py  test_send_skype_message.py
skype-sender-exercise/conf/: skype_conf.py
skype-sender-exercise/src/: common_functions.py  (+1 more)
(+2 files in other folders)
